--- a/index.html
+++ b/index.html
@@ -3,8 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Site Name, Title, Author and Description to be displayed -->
+    <meta
+      property="og:site_name"
+      content="German Cordova | Desarrollador de Software"
+    />
+    <meta name="title" content="German Cordova | Desarrollador de Software" />
+    <meta name="author" content="German Cordova" />
+    <meta
+      name="description"
+      content="I am a software developer with extensive experience in web design and software development."
+    />
+    <!-- OpenGraph Title & Description -->
+    <meta
+      name="title"
+      property="og:title"
+      content="German Cordova | Desarrollador de Software"
+    />
+    <meta
+      name="description"
+      property="og:description"
+      content="I am a software developer with extensive experience in web design and software development."
+    />
+    <!-- Image to display -->
+    <meta
+      name="image"
+      property="og:image"
+      itemprop="image"
+      content="https://german-cordova.netlify.app/assets/profile-53mGmPhE.png"
+    />
+    <meta name="type" property="og:type" content="website" />
+    <meta name="image" property="og:image:type" content="image/jpeg" />
+    <!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
+    <meta name="image" property="og:image:width" content="300" />
+    <meta name="image" property="og:image:height" content="300" />
+    <!-- Website to visit -->
+    <meta
+      name="url"
+      property="og:url"
+      content="https://german-cordova.netlify.app/"
+    />
     <title>German Cordova - Portafolio</title>
-    <link rel="icon" type="image/svg+xml" href="./src/assets/images/profile.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/images/profile.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
