--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       property="og:url"
       content="https://german-cordova.netlify.app/"
     />
+    <meta name="keywords" content="German Cordova, GetByte, german, german daniel soto cordova">
     <title>German Cordova - Portafolio</title>
     <link
       rel="icon"
