Primera versión de portafolio

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <!-- Site Name, Title, Author and Description to be displayed -->
     <meta
       property="og:site_name"
-      content="German Cordova | Desarrollador de Software"
+      content="Ruth Grecia Peña Valdez | Desarrolladora de Software"
     />
-    <meta name="title" content="German Cordova | Desarrollador de Software" />
-    <meta name="author" content="German Cordova" />
+    <meta name="title" content="Ruth Grecia Peña Valdez | Desarrolladora de Software" />
+    <meta name="author" content="Ruth Grecia Peña Valdez" />
     <meta
       name="description"
       content="I am a software developer with extensive experience in web design and software development."
@@ -18,7 +18,7 @@
     <meta
       name="title"
       property="og:title"
-      content="German Cordova | Desarrollador de Software"
+      content="Ruth Peña Valdez | Desarrolladora de Software"
     />
     <meta
       name="description"
@@ -43,8 +43,8 @@
       property="og:url"
       content="https://german-cordova.netlify.app/"
     />
-    <meta name="keywords" content="German Cordova, GetByte, german, german daniel soto cordova">
-    <title>German Cordova - Portafolio</title>
+    <meta name="keywords" content="Ruth Peña, GetByte, german, ruth grecia pena valdez">
+    <title>Ruth Grecia Peña Valdez - Portafolio</title>
     <link
       rel="icon"
       type="image/svg+xml"
